@@ -4,6 +4,9 @@
 	- add --cdrom switch to make cdrom based dist-upgrades possible
 	- better error reporting
 	- moved the logging into the /var/log/dist-upgrade/ dir
+	- change the obsoletes calculation when run without network and
+          consider demotions as obsoletes then (because we can't really
+	  use the "downloadable" hint without network)
 2006-08-18: 
 	- sort the demoted software list
 2006-07-31:
